# clickhouse-arrow

./: .gitignore  .justfile  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md  cliff.toml  release.toml
.github/workflows/: ci.yml  pr.yml  release.yml  security.yml
.zed/: settings.json
clickhouse-arrow/: Cargo.toml  README.md  clippy.toml
clickhouse-arrow-derive/: Cargo.toml  README.md
clickhouse-arrow-derive/src/: attr.rs  bound.rs  lib.rs  receiver.rs
clickhouse-arrow/benches/: compression.rs  insert.rs  pool_insert.rs  query.rs  scalar.rs
clickhouse-arrow/benches/common/: mod.rs
clickhouse-arrow/examples/: README.md  dynamic_tune.rs  insert.rs  insert_multi_threaded.rs  issue_34.rs  large_scale.rs  pool.rs  row_binary.rs  scalar.rs  select.rs
clickhouse-arrow/examples/common/: mod.rs  scale_utils.rs
clickhouse-arrow/src/: arrow.rs  client.rs  compression.rs  constants.rs  errors.rs  explain.rs  flags.rs  formats.rs  io.rs  lib.rs  limits.rs  native.rs  pool.rs  prelude.rs  query.rs  row.rs  schema.rs  settings.rs  telemetry.rs  test_utils.rs
clickhouse-arrow/src/arrow/: block.rs  builder.rs  deserialize.rs  schema.rs  serialize.rs  simd.rs  types.rs  utils.rs
clickhouse-arrow/src/arrow/builder/: dictionary.rs  list.rs  map.rs  union.rs
clickhouse-arrow/src/arrow/deserialize/: binary.rs  dynamic.rs  enums.rs  list.rs  low_cardinality.rs  map.rs  nested.rs  null.rs  primitive.rs  qbit.rs  sparse.rs  tuple.rs  variant.rs
clickhouse-arrow/src/arrow/serialize/: aggregate_function.rs  binary.rs  dynamic.rs  enums.rs  list.rs  low_cardinality.rs  map.rs  nested.rs  null.rs  primitive.rs  qbit.rs  tuple.rs  variant.rs
clickhouse-arrow/src/client/: builder.rs  chunk.rs  connection.rs  http.rs  internal.rs  options.rs  reader.rs  response.rs  writer.rs
clickhouse-arrow/src/formats/: arrow.rs  native.rs  protocol_data.rs
clickhouse-arrow/src/native/: block.rs  block_info.rs  convert.rs  kinds.rs  protocol.rs  sparse.rs  types.rs  values.rs
clickhouse-arrow/src/native/convert/: raw_row.rs  std_deserialize.rs  std_serialize.rs
clickhouse-arrow/src/native/types/: deserialize.rs  geo.rs  map.rs  serialize.rs  tests.rs
clickhouse-arrow/src/native/types/deserialize/: array.rs  dynamic.rs  geo.rs  low_cardinality.rs  map.rs  nested.rs  nullable.rs  object.rs  sized.rs  string.rs  tuple.rs  variant.rs
clickhouse-arrow/src/native/types/serialize/: aggregate_function.rs  array.rs  dynamic.rs  geo.rs  low_cardinality.rs  map.rs  nested.rs  nullable.rs  object.rs  qbit.rs  sized.rs  string.rs  tuple.rs  variant.rs
clickhouse-arrow/src/native/values/: bytes.rs  date.rs  decimal.rs  fixed_point.rs  int256.rs  ip.rs  json.rs  tests.rs  vec_tuple.rs
clickhouse-arrow/src/row/: builder.rs  deserialize.rs  dynamic.rs  protocol.rs  read.rs
clickhouse-arrow/src/row/builder/: dictionary.rs  list.rs  map.rs
clickhouse-arrow/src/row/deserialize/: binary.rs  dictionary.rs  enums.rs  list.rs  map.rs  null.rs  primitive.rs  tuple.rs
clickhouse-arrow/tests/: e2e_arrow.rs  e2e_cross_client.rs  e2e_native.rs  e2e_params.rs  row_binary_arrow.rs
clickhouse-arrow/tests/common/: arrow_helpers.rs
clickhouse-arrow/tests/tests/: arrow.rs  compat.rs  cross_client.rs  mod.rs  native.rs  params.rs
clickhouse_native/: Cargo.toml  README.md  clippy.toml
clickhouse_native/.cargo/: config.toml
clickhouse_native/benches/: compression.rs  insert.rs  insert_many.rs  insert_max.rs  pool_insert.rs  query.rs  scalar.rs
clickhouse_native/benches/common/: mod.rs
clickhouse_native/examples/: client.rs  insert.rs  insert_multi.rs  pool.rs  row_binary.rs  scalar.rs  select.rs
clickhouse_native/examples/common/: mod.rs
clickhouse_native/src/: arrow.rs  client.rs  client_info.rs  compression.rs  constants.rs  ddl.rs  errors.rs  flags.rs  formats.rs  io.rs  lib.rs  native.rs  pool.rs  prelude.rs  query.rs  row.rs  schema.rs  settings.rs  spawn.rs  telemetry.rs  test_utils.rs
clickhouse_native/src/arrow/: block.rs  deserialize.rs  schema.rs  serialize.rs  types.rs  utils.rs
clickhouse_native/src/arrow/deserialize/: binary.rs  enums.rs  list.rs  low_cardinality.rs  map.rs  null.rs  primitive.rs  tuple.rs
clickhouse_native/src/arrow/serialize/: binary.rs  enums.rs  list.rs  low_cardinality.rs  map.rs  null.rs  primitive.rs  string.rs  tuple.rs
clickhouse_native/src/client/: builder.rs  chunk.rs  cloud.rs  connection.rs  http.rs  internal.rs  options.rs  reader.rs  response.rs  tcp.rs  writer.rs
clickhouse_native/src/formats/: arrow.rs  native.rs  protocol_data.rs
clickhouse_native/src/native/: block.rs  block_info.rs  client_info.rs  convert.rs  error_codes.rs  progress.rs  protocol.rs  types.rs  values.rs
clickhouse_native/src/native/convert/: json.rs  raw_row.rs  std_deserialize.rs  std_serialize.rs  unit_value.rs  vec_tuple.rs
clickhouse_native/src/native/types/: deserialize.rs  geo.rs  serialize.rs  tests.rs
clickhouse_native/src/native/types/deserialize/: array.rs  geo.rs  low_cardinality.rs  map.rs  nullable.rs  object.rs  sized.rs  string.rs  tuple.rs
clickhouse_native/src/native/types/serialize/: array.rs  geo.rs  low_cardinality.rs  map.rs  nullable.rs  object.rs  sized.rs  string.rs  tuple.rs
clickhouse_native/src/native/values/: bytes.rs  date.rs  decimal.rs  fixed_point.rs  geo.rs  int256.rs  ip.rs  json.rs  tests.rs  vec_tuple.rs
clickhouse_native/src/row/: arrow.rs  protocol.rs
clickhouse_native/src/row/arrow/: binary.rs  builder.rs  dictionary.rs  dynamic.rs  list.rs  nested.rs  primitive.rs
clickhouse_native/tests/: e2e.rs  e2e_arrow.rs  e2e_arrow_chunked.rs  e2e_compat.rs  e2e_native.rs  row_binary_arrow.rs
clickhouse_native/tests/common/: arrow_helpers.rs  constants.rs  docker.rs  mod.rs  native_helpers.rs
clickhouse_native/tests/tests/: arrow.rs  compat.rs  mod.rs  native.rs
clickhouse_native_derive/: Cargo.toml
clickhouse_native_derive/src/: ast.rs  attr.rs  case.rs  check.rs  lib.rs  receiver.rs  row.rs  symbol.rs
coverage/html/: index.html
(+106 files in other folders)
