[package]
name = "clickhouse-arrow-derive"
version = "0.1.0"
edition.workspace = true
description = "Procedural macros for the clickhouse-arrow crate"
license = "Apache-2.0"
repository = "https://github.com/georgeleepatterson/clickhouse-arrow"
homepage = "https://github.com/georgeleepatterson/clickhouse-arrow"
documentation = "https://docs.rs/clickhouse-arrow"
readme = "README.md"
keywords = ["clickhouse", "arrow", "derive", "macro"]
categories = ["database"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0"
syn = "2"
